<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.optionsActivity"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editfrag_addtobasketbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish_name"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/editfrag_addtobasketbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dish_name">

            <ImageView
                android:id="@+id/edit_foodimage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/dyrlaegensnatmad_big"
                tools:layout_editor_absoluteX="93dp"
                tools:layout_editor_absoluteY="51dp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/cbdark"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/editbuttonshapeleft_tablet"
                        android:buttonTint="#FFFFFF"
                        android:checked="true"
                        android:layoutDirection="rtl"
                        android:text="@string/breadtype_dark"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/cblight"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/editbuttonshaperight_tablet"
                        android:buttonTint="#FFFFFF"
                        android:text="@string/breadtype_light"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/optionsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/editfrag_addtobasketbutton"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:background="@color/btnColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/popupshape" />

    <TextView
        android:id="@+id/editfrag_buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tablet_selection_button_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editfrag_addtobasketbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editfrag_addtobasketbutton"
        app:layout_constraintVertical_bias="0.619"
        tools:text="@string/tablet_selection_button_text" />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>